# Crisis-Environment

./: .gitignore  Dockerfile  FIXES_APPLIED.md  LLM_INTEGRATION.md  README.md  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_handlers.py  test_llm_validator_sim.py  test_llm_warmup.py  test_server_start.py  test_ui_flow.py  validate-submission.sh
agents/: greedy_agent.py  heuristic_agent.py  llm_agent.py  random_agent.py
data/: easy.json  hard.json  medium.json
env/: __init__.py  env.py  grader.py  tasks.py
server/: app.py
tests/: test_api.py  test_integration.py
